--- a/src/template.html
+++ b/src/template.html
@@ -3,13 +3,13 @@
 
 <head>
 	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width'>
-	<meta name='theme-color' content='#aa1e1e'>
+	<meta name='viewport' content='width=device-width,initial-scale=1.0'>
+	<meta name='theme-color' content='#333333'>
 
 	%sapper.base%
 
 	<link rel='stylesheet' href='global.css'>
-	<link rel='manifest' href='manifest.json'>
+	<link rel='manifest' href='manifest.json' crossorigin='use-credentials'>
 	<link rel='icon' type='image/png' href='favicon.png'>
 
 	<script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"
