--- a/static/slides/2311_snufa_nir/index.html
+++ b/static/slides/2311_snufa_nir/index.html
@@ -100,14 +100,17 @@
 				</section>
 				
 				<section>
-					<h4><img src="../2304_NICE/norse_logo.png" style="height: 45px; margin:0; vertical-align: bottom;"/> $\rightarrow$ NIR</h4>
-					<pre><code data-trim data-noescape data-line-numbers="1|3|5">import norse.torch as norse
+					<img src="../2304_NICE/norse_logo.png" style="height: 60px; margin:0; vertical-align: bottom;"/> $\to$ SynSense Speck <img src="speck.png"style="height: 60px; margin:0; vertical-align: middle;"/>
+					<br/>
+					<br/>
+					<h4 class="fragment" data-fragment-index="0">Norse $\rightarrow$ NIR</h4>
+					<pre class="fragment" data-fragment-index="0"><code data-trim data-noescape data-line-numbers="1|3|5">import norse.torch as norse
 
 model = norse.SequentialState( ... )
 
 nir_model = norse.to_nir(model, torch.randn(1, 10))
 				</code></pre>
-					<h4 class="fragment">NIR $\rightarrow$ SynSense Sinabs <img src="speck.png"style="height: 60px; margin:0; vertical-align: middle;"/></h4>
+					<h4 class="fragment">NIR $\rightarrow$ SynSense Sinabs</h4>
 					<pre class="fragment"><code data-trim data-noescape data-line-numbers="1|3">import sinabs.from_nir
 
 sinabs_model = sinabs.from_nir(nir_model, batch_size=4)
