--- a/slides/2311_snufa_nir/index.html
+++ b/slides/2311_snufa_nir/index.html
@@ -57,12 +57,12 @@
 						V. Fra,
 						F. C. Bauer,
 						P. Zhou,
-						D. Richard Muir,
+						D. R. Muir,
 						B. Vogginger,
 						K. Heckel,
 						T. C. Stewart,
 						S. Shankar,
-						J. Eshragian,
+						J. Eshraghian,
 						S. Sheik </h4>
 
 					<p style="display: flex; gap: 1em; color: #555; font-size: 60%; justify-content: center;">
