--- a/slides/2311_snufa_nir/index.html
+++ b/slides/2311_snufa_nir/index.html
@@ -92,7 +92,7 @@
 					<div style="display: flex; justify-content: center; align-items: center;">
 					<img src="conv_similarity.png" style="width:70%;" data-fragment-index="0" class="fragment"/>
 					<ul style="font-size: 60%; margin-left: 1.6em; width: 70%;">
-						<li class="fragment fade-in-then-semi-out">NIR reproduces the computation</li>
+						<li class="fragment fade-in-then-semi-out">NIR reproduces ideal model</li>
 						<li class="fragment fade-in-then-semi-out" style="margin: 0.8em 0;">Exposes discretization mismatch</li>
 						<li class="fragment fade-in-then-semi-out">Allows platform-specific optimization</li>
 					</ul>
