--- a/slides/2403_OffDig/index.html
+++ b/slides/2403_OffDig/index.html
@@ -211,8 +211,8 @@
 						Og så glemmer vi endda alt udenom - harddisk, RAM, køling.
 						Nogle mener den ligger 27-35 OOM over!
 						<br />
-						Det er ikke bare møj godt. Det er så urimeligt at mine forfædre ikke har opfundet ord for det.
-						Det er ca. lige så mange atomer som der er i universet (1e27). Og universet er stort.
+						Det er ikke bare møj godt. Vores forfædre ikke har opfundet ord for det.
+						Der er 1e24 stjerner i universet. Og universet er stort.
 						<br />
 						Gentager; Hvad I går for 1 mio kroner kan jeg gøre for 1 Øre
 						<br />
@@ -325,6 +325,8 @@
 				<section data-background-image="brain_sketch.jpeg" data-background-opacity="0.3" data-background-color="#000">
 					<h1>Opsummeret:</h1>
 					<h2>Neuromorfisk hardware er kropsliggjort AI</h2>
+					<br/>
+					<h3 class="fragment">Inspireret af fysikken og biologien</h3>
 				</section>
 
 				<section data-background-image="brain_sketch.jpeg" data-background-opacity="0.3" data-background-color="#000">
