--- a/static/slides/2404_ATP/index.html
+++ b/static/slides/2404_ATP/index.html
@@ -70,8 +70,13 @@
 		}
 
 		.shadow3 {
-			text-shadow: 3px 0 #000, 0 3px #000, -3px 0 #000, 0 -3px #000, 
-								  -2px 2px 0 #000, 2px 2px 0 #000, 2px -2px 0 #000, -2px -2px 0 #000 !important;	
+			text-shadow: 3px 0 #000, 0 3px #000, -3px 0 #000, 0 -3px #000,
+				-2px 2px 0 #000, 2px 2px 0 #000, 2px -2px 0 #000, -2px -2px 0 #000 !important;
+		}
+
+		.shadow3-white {
+			text-shadow: 3px 0 #f9f9f9, 0 3px #f9f9f9, -3px 0 #f9f9f9, 0 -3px #f9f9f9,
+				-2px 2px 0 #f9f9f9, 2px 2px 0 #f9f9f9, 2px -2px 0 #f9f9f9, -2px -2px 0 #f9f9f9 !important;
 		}
 	</style>
 </head>
@@ -101,7 +106,8 @@
 						</div>
 						<div class="col">
 							<!-- <img src="https://picsum.photos/1500/1200" class="full-size" /> -->
-							<video src="2403_mouse_cortex.mp4" loop muted autoplay class="full-size" data-autoplay></video>
+							<video src="../2403_OffDig/2403_mouse_cortex.mp4" loop muted autoplay class="full-size"
+								data-autoplay></video>
 							<!-- <iframe width="560" height="315" src="blue_brain.webm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
 						</div>
 					</div>
@@ -123,7 +129,7 @@
 			<section>
 
 				<section>
-					<img src="24_data_instructions1.png" class="r-stretch"/>
+					<img src="24_data_instructions1.png" class="r-stretch" />
 				</section>
 
 				<section>
@@ -286,8 +292,8 @@
 				<section data-background-color="white">
 					<h2>Biologisk-inspirerede kredsløb</h2>
 					<div class="container">
-						<img src="control_circuit.png" class="col" style="height: 500px; margin: 0 auto;"/>
-						<img src="neuronservo.png" class="col fragment" style="height: 300px; margin: auto auto;"/>
+						<img src="control_circuit.png" class="col" style="height: 500px; margin: 0 auto;" />
+						<img src="neuronservo.png" class="col fragment" style="height: 300px; margin: auto auto;" />
 					</div>
 					<a class="credit" href="https://authors.library.caltech.edu/53092/1/00080335.pdf">DeWeerth et al., 1991</a>
 				</section>
@@ -361,7 +367,7 @@
 								effektivt</span></p>
 						<p class="fragment">Teknologien er ung <span class="fragment">... men lover godt</span></p>
 					</div>
-					<br/>
+					<br />
 
 					<div style="font-size: 150%; line-height: 2em;">
 						<p class="fragment">Vi får <i style="font-style: italic;">mindst</i> <span
@@ -389,6 +395,9 @@
 							Keller</a> on <a
 							href="https://unsplash.com/photos/landscape-photography-of-lake-and-mountain-73F4pKoUkM0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
 					</p> -->
+					<aside class="notes">
+						To perspektiver: applikationsperspektiv og investeringsperspektiv
+					</aside>
 				</section>
 
 				<section>
@@ -400,7 +409,7 @@
 				</section>
 
 				<section data-background-color="white">
-					<img src="strogatz.png"/>
+					<img src="strogatz.png" />
 					<span class="credit">Strogatz, 1994</span>
 				</section>
 
@@ -408,14 +417,14 @@
 					<h2>Hvordan programmerer vi dem?</h2>
 					<div class="container">
 						<div class="fragment col">
-							Det vi kender: 
-							<br/>
-							<img src="code.avif" style="width: 700px;"/>
+							Det vi kender:
+							<br />
+							<img src="code.avif" style="width: 700px;" />
 						</div>
 						<div class="fragment col">
 							Det vi skal bruge:
 							$$\tau \frac{dv}{dt} = - v + I$$
-							<img src="lif_nir.png" class="fragment" style="width: 900px;"/>
+							<img src="lif_nir.png" class="fragment" style="width: 900px;" />
 							<p class="credit">Pedersen et al., 2023</p>
 						</div>
 					</div>
@@ -425,7 +434,7 @@
 					<h2>Neuromorphic Intermediate Representation</h2>
 					<h3>7 simulatorer og 4 hardware platforme</h3>
 					<img src="nirhero.png" />
-					<br/>
+					<br />
 					<p class="credit">Pedersen et al., 2023</p>
 				</section>
 
@@ -439,6 +448,38 @@
 						Spreder sig: udbredes om 5 år
 					</aside>
 				</section>
+
+				<section
+					data-background-image="https://images.unsplash.com/photo-1582213782179-e0d53f98f2ca?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+					<h1 class="shadow3-white" style="color: black;">Levende open-source community</h1>
+				</section>
+
+				<section>
+					<h2>Neuromorphic Deep Learning</h2>
+						<!--<img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Pytorch_logo.png?20211003060202"/> -->
+						<img src="https://raw.githubusercontent.com/norse/norse/master/logo.png" >
+					<pre class="fragment" data-fragment-index="0" style="font-size: 150%;">
+							<code data-trim data-noescape data-line-numbers="1|3">
+model = ...        # Define model
+
+trainer.fit(model) # Train model ...</code>
+					</pre>
+				</section>
+
+				<section data-background-color="white">
+					<h2>A neuromorphic instruction set</h2>
+					<img src="https://nnir.readthedocs.io/en/latest/_images/nir_platforms.png"  class="r-stretch"/>
+					<pre class="fragment" data-fragment-index="0" style="font-size: 150%;">
+						<code data-trim data-noescape data-line-numbers="1|3"><pre class="fragment" data-fragment-index="0" style="font-size: 150%;"><code data-trim data-noescape>norse.to_nir(model)</code>
+						</pre>
+						</code>
+				</pre>
+				</section>
+
+				<section>
+					<iframe src="https://open-neuromorphic.org/" width="100%" height="1000px"></iframe>
+				</section>
+
 				<section>
 					<div style='position: relative; padding-bottom: 56.25%; padding-top: 35px; height: 0; overflow: hidden;'
 						class="full-size">
@@ -473,7 +514,8 @@
 						</div>
 						<div class="col">
 							<!-- <img src="https://picsum.photos/1500/1200" class="full-size" /> -->
-							<video src="../2403_OffDig/2403_mouse_cortex.mp4" loop muted autoplay class="full-size" data-autoplay></video>
+							<video src="../2403_OffDig/2403_mouse_cortex.mp4" loop muted autoplay class="full-size"
+								data-autoplay></video>
 							<!-- <iframe width="560" height="315" src="blue_brain.webm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
 						</div>
 					</div>
