Added mountain video

--- a/static/slides/2409_DIT/index.html
+++ b/static/slides/2409_DIT/index.html
@@ -93,6 +93,8 @@
 							<br />
 							<br />
 							<h4>Jens Egholm Pedersen<br /> PhD Studerende, KTH Royal Institute of Technology
+								<p style="font-size: 80%;"> <i class="fa fa-heart"></i> GitHub Sponsors <i
+										class="fa-brands fa-github"></i> jegp</p>
 								<p style="font-size: 80%;"><i class="fa fa-envelope"></i> jeped@kth.se</p>
 								<p style="font-size: 80%;"><i class="fa-brands fa-mastodon"></i> jegp@mastodon.social
 								</p>
@@ -310,13 +312,13 @@
 				</section>
 
 				<section>
-					<h2>Neuromorfiske camera</h2>
+					<h2>Neuromorfiske cameraer</h2>
 					<video src="westmead_3d_small.mp4" loop muted autoplay data-autoplay class="r-stretch"></video>
 					<p class="credit" style="margin: 0em 10em 0 0;"><a href="https://github.com/aMarcireau">Alexandre
 							Marcireau</a></p>
 					<aside class="notes">
 						Asynkrone pixels -> punktsky
-						Sparer data 
+						Sparer data
 						Anden fordel: millisekonds reaktionstid
 						Men: Svært at arbejde med
 					</aside>
@@ -383,7 +385,7 @@
 					<h2>Decentrale computere</h2>
 
 					<div class="r-stack">
-						<img src="nir_model.png" class="fragment fade-in-then-out" style="width: 600px;"/>
+						<img src="nir_model.png" class="fragment fade-in-then-out" style="width: 600px;" />
 						<img src="nir_platforms.png" class="fragment fade-in-then-out">
 						<img src="phd_speech_bubble.png" class="fragment" style="width: 700px;">
 					</div>
@@ -410,18 +412,37 @@
 						<li class="fragment">Energibesparelse (større chips)</li>
 						<li class="fragment">Specifikke sensorkrav</li>
 					</ul>
+					<br /><br />
+					<h3 class="fragment">En hel ny klasse af udregninger</h3>
 					<aside class="notes">
 						Edge: droner, robotter, IoT
-						Energi: mindre sprogmodeller 
+						Energi: mindre sprogmodeller
 						Sensorer: hastighed (svejsning), energiforbrug (solceller), radar data (object detection)
-						  - "Besjæling" af omverdenen
+						- "Besjæling" af omverdenen
 					</aside>
 				</section>
+
+				<section data-background-video="mountain_stream_small.mp4" data-background-loop data-background-muted>
+				</section>
+
+				<section>
+					<h2>Hvad med kvantecomputere?</h2>
+					<br />
+					<div style="width: 80%; margin: 0 auto; font-size: 150%;">
+						<q>Quantum computing ... is analogous to an analog implementation</q>
+						<p class="credit">Hasler & Black 2021</p>
+					</div>
+					<br />
+					<div class="fragment" style="width: 80%; margin: 0 auto; font-size: 150%;">
+					<h3>Er neuromorfiske computere kvantecomputere uden krumspring?</h3>
+					<p class="credit">Jens, egen regning</p>
+					</div>
+				</section>
+
 			</section>
 			<section>
 
-				<section data-background-image="brain_sketch.jpeg" data-background-opacity="0.3"
-					data-background-color="#000">
+				<section data-background-image="brain_sketch.jpeg" data-background-opacity="0.3" data-background-color="#000">
 					<h3 class="fragment">Neuromorfisk hardware findes og kan købes i dag</h3>
 					<h3 class="fragment">Neuromorfiske computere er <span style="color:red;">$\times$1000</span> mere
 						effektive</h3>
@@ -437,6 +458,8 @@
 							<br />
 							<br />
 							<h4>Jens Egholm Pedersen<br /> PhD Studerende, KTH Royal Institute of Technology
+								<p style="font-size: 80%;"> <i class="fa fa-heart"></i> GitHub Sponsors <i
+										class="fa-brands fa-github"></i> jegp</p>
 								<p style="font-size: 80%;"><i class="fa fa-envelope"></i> jeped@kth.se</p>
 								<p style="font-size: 80%;"><i class="fa-brands fa-mastodon"></i> jegp@mastodon.social
 								</p>
@@ -464,10 +487,10 @@
 	<script src="plugin/highlight/highlight.js"></script>
 	<script>
 		// More info about initialization & config:
-		// - https://revealjs.com/initialization/
-		// - https://revealjs.com/config/
-		Reveal.initialize({
-			width: 1920,
+			// - https://revealjs.com/initialization/
+			// - https://revealjs.com/config/
+			Reveal.initialize({
+				width: 1920,
 			height: 1000,
 			margin: 0.02,
 			hash: true,
