Added page on Frauenhofer slides

--- a/static/slides/2502_STANCE/index.html
+++ b/static/slides/2502_STANCE/index.html
@@ -277,8 +277,22 @@
 					$$
 					<b>First principles</b>: Boolean algebra, Turing machines
 					<br/>
-					<img src="energy.png" class="r-stretch fragment"/>
+					<img src="energy.png" class="fragment" style="width: 40%;"/>
 					<p class="credit">Shankar, 2023</p>
+				</section>
+
+				<section>
+					<h3>What are neural systems doing?</h3>
+					<blockquote>
+						... the nervous system is based on two types of communications: 
+						...
+						communications of orders (logical ones) and communications of numbers (arithmetical ones).
+						The former may be  described as language proper, the latter as mathematics.
+					</blockquote>
+					<p class="credit">"The Computer and the Brain", von Neumann 1958</p>
+					<aside class="notes">
+						Also talks about specialized accelerators (c f. Fabio's introduction)
+					</aside>
 				</section>
 
 				<section>
@@ -320,7 +334,7 @@
 					<h3>A few challenges...</h3>
 
 					<ul>
-						<li>Ill-defined and unstable computational models <span class="fragment">(no co-design)</span></li>
+						<li>Ill-defined and unstable computational models <span class="fragment">(limited co-design)</span></li>
 						<li>Heterogeneous and incompatible platforms</li>
 						<li>Reproducibility crisis</li>
 					</ul>
@@ -452,6 +466,18 @@ sinabs_model = sinabs.from_nir(nir_model, batch_size=4)
 						This essay introduces the term hardware lottery to describe when a research idea wins because it is suited to the available software and hardware and not because the idea is superior to alternative research directions.
 					</blockquote>
 					<p class="credit">Sara Hooker, 2020</p>
+				</section>
+
+				<section>
+					<h3>Re-introduce analog accelerators</h3>
+					<img src="energy.png" style="width: 40%";/>
+					<p class="credit">Shankar, 2023</p>
+				</section>
+
+				<section>
+					<h3>Leverage analog-digital interplay</h3>
+					<img src="neuromorphic_prog.png" class="r-stretch"/>
+					<p class="credit">Abreu & Pedersen, 2024</p>
 				</section>
 
 				<section>
