Updated Tonik slides

--- a/static/slides/2505_Tonik/index.html
+++ b/static/slides/2505_Tonik/index.html
@@ -100,11 +100,6 @@
 							<!-- <iframe width="560" height="315" src="blue_brain.webm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
 						</div>
 					</div>
-					<aside class="notes">
-						Revolution, sounds crazy but it's true
-						<br />
-						I'll give you a stick and a carrot
-					</aside>
 				</section>
 			</section>
 			<section>
@@ -114,7 +109,7 @@
 				</section>
 
 				<section data-background-image="stick.jpg">
-					<div class="r-stack">
+					<div class="r-stack" style="height:80vh;">
 						<img src="twh.png" class="fragment fade-in-then-out" style="opacity: 0.8;"/>
 						<img src="training_time.png" class="fragment" style="opacity: 0.8;"/>
 					</div>
@@ -123,7 +118,7 @@
 
 				<section data-background-color="#5983a0">
 					<h2 class="fragment">The landauer limit</h2>
-					<div class="container" style="width: 1500px">
+					<div class="container" style="width: 1500px; height: 80vh;">
 						<img src="cold_hot.png" class="col" style="max-height: 90vh; max-width: 90vh;" />
 						<div class="col fragment">
 							<br /><br />
@@ -165,9 +160,9 @@
 					<h2>What does $10^8$ mean?</h2>
 					<p class="fragment">Humans live $\sim 10^2$ years. &emsp; <b class="fragment">The universe is $\sim 10^{10}$ years old!</b></p>
 					</p>
-					<p class="fragment">A human is $\sim 10^0 = 1$m tall. &emsp; <b class="fragment">There are $10^{8}$m to the moon!</b></p>
+					<p class="fragment">A human is $\sim 10^0$m tall. &emsp; <b class="fragment">There are $10^{8}$m to the moon!</b></p>
 					</p>
-					<p class="fragment">Humans walk $\sim 10^0 = 1$m/s. &emsp; <b class="fragment">$3 \times 10^8$ m/s is the speed of light!</b></p>
+					<p class="fragment">Humans walk $\sim 10^0$m/s. &emsp; <b class="fragment">$3 \times 10^8$ m/s is the speed of light!</b></p>
 					</p>
 					</p>
 				</div>
@@ -202,21 +197,6 @@
 					</div>
 				</section>
 
-				<section data-background-color="white" data-background-image="../2410_DM/analogt_vs_digitalt.webp">
-					<div  style="background-color: rgba(0, 0, 0, 0.5); padding: 1em;">
-
-					<h2 style="color: white; text-shadow: -2px -2px 0 black,  /* Top left */
-					2px -2px 0 black,  /* Top right */
-				   -2px  2px 0 black,  /* Bottom left */
-					2px  2px 0 black,  /* Bottom right */
-					2px  0px 0 black,  /* Right */
-				   -2px  0px 0 black,  /* Left */
-					0px  2px 0 black,  /* Bottom */
-					0px -2px 0 black;  /* Top */;">Analog vs. digital</h2>
-
-					</div>
-				</section>
-
 				<section data-background-color="white">
 					<div class="container">
 						<div class="fragment col">
@@ -238,6 +218,7 @@
 						</div>
 					</div>
 				</section>
+
 				<section>
 					<h2>How do we interact with them?</h2>
 				</section>
@@ -254,7 +235,20 @@
 					</aside>
 				</section>
 
+				<section data-background-color="white" data-background-image="../2410_DM/analogt_vs_digitalt.webp">
+					<div  style="background-color: rgba(0, 0, 0, 0.5); padding: 1em;">
 
+					<h2 style="color: white; text-shadow: -2px -2px 0 black,  /* Top left */
+					2px -2px 0 black,  /* Top right */
+				   -2px  2px 0 black,  /* Bottom left */
+					2px  2px 0 black,  /* Bottom right */
+					2px  0px 0 black,  /* Right */
+				   -2px  0px 0 black,  /* Left */
+					0px  2px 0 black,  /* Bottom */
+					0px -2px 0 black;  /* Top */;">Analog vs. digital</h2>
+
+					</div>
+				</section>
 
 				<section data-background-color="white">
 					<h2>The neuromorphic tech stack</h2>
@@ -304,7 +298,7 @@
 						<div class="col">
 							<h3>Prophesee EVK4</h2>
 							<h3>~100mW</h3>
-							<img src="evk4.jpg" style="width: 800px;"/>
+							<img src="evk4.jpg" style="width: 600px;"/>
 						</div>
 						<div class="col">
 							<h3>Inivation DVXplorer</h2>
@@ -353,7 +347,7 @@
 					<h1>Neuromorphic computing</h1>
 					<h2 class="fragment">Brain-inspired <i style="font-style: italic;">physical</i> computing</h2>
 					<h2 class="fragment">Can save more than $1000\times$ energy today</h2>
-					<h2 class="fragment">Sense and computes <i style="font-style: italic;">much faster</i> than digital</h2>
+					<h2 class="fragment">Senses and computes <i style="font-style: italic;">much faster</i> than digital</h2>
 					
 					<aside class="notes">
 						Alle de ting vi gør. Kan vi gøre 1000vis af gange.
